crates/pane-tui/src/ui/snapshots/pane__ui__tests_context_menu__ctx_menu_home_body.snap
---
source: crates/pane-tui/src/ui/tests_context_menu.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  home                                                                                                             +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ projects ──────────────────╮╭────────────────────────────────────────────────────────────────────────────────────────╮
│  search…                   ││  RecentCommits                                                                      +  │
│────────────────────────────││ ────────────────────────────────────────────────────────────────────────────────────── │
│  (no projects)             ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            │╭──────────────────╮                                                                     │
│                            ││ Change Widget    │                                                                     │
│                            ││ Add Widget Right │                                                                     │
│                            ││ Add Widget Below │                                                                     │
│                            ││ Remove Widget    │                                                                     │
│                            │╰──────────────────╯                                                                     │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││   select a project                                                                     │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
│                            ││                                                                                        │
╰────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────────╯
 ( j/k ) navigate · ( Enter ) select · ( Esc ) cancel
