crates/pane-tui/src/ui/snapshots/pane__ui__tests_context_menu__ctx_menu_pane_body.snap
---
source: crates/pane-tui/src/ui/tests_context_menu.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  1                                                                                                                +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  zsh                                                                                                              +  │
│ ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────── │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                           ╭──────────────────╮                                       │
│                                                           │ Change Widget    │                                       │
│                                                           │ Add Widget Right │                                       │
│                                                           │ Add Widget Below │                                       │
│                                                           │ Remove Widget    │                                       │
│                                                           ╰──────────────────╯                                       │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 ( j/k ) navigate · ( Enter ) select · ( Esc ) cancel
