crates/pane-tui/src/ui/snapshots/pane__ui__tests_context_menu__ctx_menu_selected_second.snap
---
source: crates/pane-tui/src/ui/tests_context_menu.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  1                ╭──────────────────╮                                                                            +  │
╰───────────────────│ Close Workspace  │───────────────────────────────────────────────────────────────────────────────╯
  zsh               │ Rename Workspace │                                                                             +
 ───────────────────╰──────────────────╯───────────────────────────────────────────────────────────────────────────────
  j/k  navigate ·  Enter  select ·  Esc  cancel
