crates/pane-tui/src/ui/snapshots/pane__ui__tests_context_menu__ctx_menu_workspace_bar.snap
---
source: crates/pane-tui/src/ui/tests_context_menu.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  1                ╭──────────────────╮                                                                            +  │
╰───────────────────│ Close Workspace  │───────────────────────────────────────────────────────────────────────────────╯
╭───────────────────│ Rename Workspace │───────────────────────────────────────────────────────────────────────────────╮
│  zsh              ╰──────────────────╯                                                                            +  │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  j/k  navigate ·  Enter  select ·  Esc  cancel
