crates/pane-tui/src/ui/snapshots/pane__ui__tests_context_menu__widget_picker_selected_fifth.snap
---
source: crates/pane-tui/src/ui/tests_context_menu.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  1                                                                                                                +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  zsh                                                                                                                +
 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                           ╭ Change Widget ─────────────────╮
                                           ╰────────────────────────────────╯
  j/k  navigate ·  Enter  select ·  Esc  cancel
