crates/pane-tui/src/ui/snapshots/pane__ui__tests_context_menu__widget_picker_split_h.snap
---
source: crates/pane-tui/src/ui/tests_context_menu.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  1                                                                                                                +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  zsh                                                                                                                +
 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                           ╭ Add Widget to the Right ───────╮
                                           ╰────────────────────────────────╯
  j/k  navigate ·  Enter  select ·  Esc  cancel
